--- a/export/defs.tex
+++ b/export/defs.tex
@@ -3,9 +3,11 @@
 
 \def\dofont#1, #2!{"#1" at #2\relax}
 \newdimen\fontsize
+\newdimen\serifsize
 
 \input config
 
+\monofam
 \rm
 
 \advance\hoffset by -25pt
