--- a/export/defs.tex
+++ b/export/defs.tex
@@ -7,6 +7,16 @@
 
 \input config
 
+% Scale some of the maths fonts down (use 7pt as a base size, not 10). Not all
+% fonts are redefined, but it should be enough for normal usage. Add new
+% definitions (\subscriptfont, \*font4 -- \*font15) when needed.
+\font\sevenex=cmex7
+\font\fiveex=cmex5
+\textfont0=\sevenrm \scriptfont0=\fiverm
+\textfont1=\seveni \scriptfont1=\fivei
+\textfont2=\sevensy \scriptfont2=\fivesy
+\textfont3=\sevenex \scriptfont3=\fiveex
+
 \monofam
 \rm
 
