Don't call \makeprintable globally since it is called locally by \verb

--- a/export/defs.tex
+++ b/export/defs.tex
@@ -18,7 +18,7 @@
 \textfont2=\sevensy \scriptfont2=\fivesy
 \textfont3=\sevenex \scriptfont3=\fiveex
 
-\monofam
+\seriffam
 \rm
 
 \advance\hoffset by -45pt
@@ -63,6 +63,7 @@
 
 % Simplified version used for short code snippets
 \def\setsimpleverb{%
+	\monofam\rm
 	\makeprintable
 	\setspace\obeyspaces\obeylines%
 }
@@ -131,4 +132,3 @@
 	\hcol{#1}%
 }
 
-\makeprintable
