Verbatim: use | as a delimiter, make inline verbatim more usable
If there were no delimiter, "\verb something\egroup" would print an
excess whitespace. This is a hotfix, there should be a more obvious way
of doing it.

Also, a macro \simpleverbatim has been defined, which is meant exactly
for the purposes of inline verbatim, since it doesn't mess with
inter-line spacing.

--- a/export/defs.tex
+++ b/export/defs.tex
@@ -76,10 +76,19 @@
 }%
 }
 
+% TODO: think of some better delimiter than |, try to make { work (\verb|hello}
+% is way less cool than \verb{hello})
+
 % Sets up the verbatim environment, end with \egroup
-\def\verb{%
+\def\verb|{%
 	\bgroup
-	\setverb
+	\setverb%
+}
+
+% Sets up a simplfied verbatim environment, end with \egroup
+\def\simpleverb|{%
+	\bgroup
+	\setsimpleverb%
 }
 
 % \col{rgb color}{font}{content}
