--- a/export/defs.tex
+++ b/export/defs.tex
@@ -104,8 +104,8 @@
 
 % Blank lines: we want to encourage page breaks here
 % These macros are inserted automatically by the source code preprocessor
-\def\sk{\penalty -500} % regular
-\def\greatsk{\penalty -3000} % after a function definition (after non-indented "}")
+\def\sk{\penalty -500\vskip -.5\charheight plus .5\charheight} % regular
+\def\greatsk{\penalty -1000\vskip 0pt plus .5\charheight} % after a function definition (after non-indented "}")
 
 \footline={}
 \headline={%
