Add forgotten geometry parts. Oops!

--- a/export/notebook.tex
+++ b/export/notebook.tex
@@ -127,28 +127,28 @@ KACTL part:
 [[kactl/geometry/linearTransformation.h]]
 [[kactl/geometry/Angle.h]]
 % \section{Circles}
-% [[kactl/geometry/CircleIntersection.h]]
-% [[kactl/geometry/circleTangents.h]]
-% [[kactl/geometry/circumcircle.h]]
-% [[kactl/geometry/MinimumEnclosingCircle.h]]
-% % \section{Polygons}
-% [[kactl/geometry/insidePolygon.h]]
-% [[kactl/geometry/PolygonArea.h]]
-% [[kactl/geometry/PolygonCenter.h]]
-% [[kactl/geometry/PolygonCut.h]]
-% [[kactl/geometry/ConvexHull.h]]
-% [[kactl/geometry/PolygonDiameter.h]]
-% [[kactl/geometry/PointInsideHull.h]]
-% [[kactl/geometry/LineHullIntersection.h]]
-% % \section{Misc. Point Set Problems}
-% [[kactl/geometry/closestPair.h]]
-% [[kactl/geometry/kdTree.h]]
-% [[kactl/geometry/DelaunayTriangulation.h]]
-% % \section{3D}
-% [[kactl/geometry/PolyhedronVolume.h]]
-% [[kactl/geometry/Point3D.h]]
-% [[kactl/geometry/3dHull.h]]
-% [[kactl/geometry/sphericalDistance.h]]
+[[kactl/geometry/CircleIntersection.h]]
+[[kactl/geometry/circleTangents.h]]
+[[kactl/geometry/circumcircle.h]]
+[[kactl/geometry/MinimumEnclosingCircle.h]]
+% \section{Polygons}
+[[kactl/geometry/insidePolygon.h]]
+[[kactl/geometry/PolygonArea.h]]
+[[kactl/geometry/PolygonCenter.h]]
+[[kactl/geometry/PolygonCut.h]]
+[[kactl/geometry/ConvexHull.h]]
+[[kactl/geometry/PolygonDiameter.h]]
+[[kactl/geometry/PointInsideHull.h]]
+[[kactl/geometry/LineHullIntersection.h]]
+% \section{Misc. Point Set Problems}
+[[kactl/geometry/closestPair.h]]
+[[kactl/geometry/kdTree.h]]
+[[kactl/geometry/DelaunayTriangulation.h]]
+% \section{3D}
+[[kactl/geometry/Point3D.h]]
+[[kactl/geometry/PolyhedronVolume.h]]
+[[kactl/geometry/3dHull.h]]
+[[kactl/geometry/sphericalDistance.h]]
 
 [[kactl/strings/KMP.h]]
 [[kactl/strings/Manacher.h]]
