--- a/export/defs.tex
+++ b/export/defs.tex
@@ -5,21 +5,21 @@
 \def\dofont#1, #2!{"#1" at #2\relax}
 \newdimen\fontsize
 \newdimen\serifsize
+\newdimen\scriptsize
+\newdimen\scriptscriptsize
 
 \input config
+
+\seriffam
+\rm
 
 % Scale some of the maths fonts down (use 7pt as a base size, not 10). Not all
 % fonts are redefined, but it should be enough for normal usage. Add new
 % definitions (\subscriptfont, \*font4 -- \*font15) when needed.
-\font\sevenex=cmex7
-\font\fiveex=cmex5
-\textfont0=\sevenrm \scriptfont0=\fiverm
-\textfont1=\seveni \scriptfont1=\fivei
-\textfont2=\sevensy \scriptfont2=\fivesy
-\textfont3=\sevenex \scriptfont3=\fiveex
-
-\seriffam
-\rm
+\textfont0=\tenrm \scriptfont0=\sevenrm
+\textfont1=\teni \scriptfont1=\seveni
+\textfont2=\tensy \scriptfont2=\sevensy
+\textfont3=\tenex \scriptfont3=\sevenex
 
 \advance\hoffset by -45pt
 \advance\hsize by 90pt
