Add preliminary version of header macros (\chapter, \section, ...)

--- a/export/defs.tex
+++ b/export/defs.tex
@@ -165,6 +165,8 @@
 \def\binom#1#2{{#1\choose #2}}
 \def\frac#1#2{{#1\over #2}}
 
+\input headers
+
 \def\img#1#2{%
 	\XeTeXpdffile ../src/#2 width #1\relax
 }
