--- a/export/notebook.tex
+++ b/export/notebook.tex
@@ -1,9 +1,5 @@
 \input defs
 
-Hello, this is our notebook. Have fun!
-
-Our part:
-
 [[base.hpp]]
 [[sc.sh]]
 [[fft/ntt.cpp]]
@@ -38,7 +34,11 @@ Our part:
 
 KACTL part:
 
+%\input chapters/math
+
 %\kactlchapter{math}
+
+\chapter{Data structures}
 
 [[kactl/data-structures/OrderStatisticTree.h]]
 [[kactl/data-structures/SegmentTree.h]]
@@ -51,6 +51,8 @@ KACTL part:
 [[kactl/data-structures/FenwickTree.h]]
 [[kactl/data-structures/FenwickTree2d.h]]
 [[kactl/data-structures/RMQ.h]]
+
+\chapter{Numerical}
 
 [[kactl/numerical/Polynomial.h]]
 [[kactl/numerical/BinarySearch.h]]
@@ -70,6 +72,8 @@ KACTL part:
 %[[kactl/numerical/Tridiagonal.h]]
 [[kactl/numerical/FFT.h]]
 
+\chapter{Number theory}
+
 [[kactl/number-theory/ModularArithmetic.h]]
 [[kactl/number-theory/ModInverse.h]]
 %[[kactl/number-theory/ModPow.h]]
@@ -84,12 +88,16 @@ KACTL part:
 [[kactl/number-theory/phiFunction.h]]
 [[kactl/number-theory/chinese.h]]
 
+\chapter{Combinatorics}
+
 [[kactl/combinatorial/intperm.h]]
 [[kactl/combinatorial/derangements.h]]
 [[kactl/combinatorial/binomial.h]]
 [[kactl/combinatorial/binomialModPrime.h]]
 [[kactl/combinatorial/RollingBinomial.h]]
 [[kactl/combinatorial/multinomial.h]]
+
+\chapter{Graphs and trees}
 
 [[kactl/graph/bellmanFord.h]]
 [[kactl/graph/FloydWarshall.h]]
@@ -115,7 +123,10 @@ KACTL part:
 [[kactl/graph/LinkCutTree.h]]
 [[kactl/graph/MatrixTree.h]]
 
-% \section{Geometric primitives}
+\chapter{Geometry}
+
+\section{Geometric primitives}
+
 [[kactl/geometry/Point.h]]
 [[kactl/geometry/lineDistance.h]]
 [[kactl/geometry/SegmentDistance.h]]
@@ -126,12 +137,16 @@ KACTL part:
 [[kactl/geometry/onSegment.h]]
 [[kactl/geometry/linearTransformation.h]]
 [[kactl/geometry/Angle.h]]
-% \section{Circles}
+
+\section{Circles}
+
 [[kactl/geometry/CircleIntersection.h]]
 [[kactl/geometry/circleTangents.h]]
 [[kactl/geometry/circumcircle.h]]
 [[kactl/geometry/MinimumEnclosingCircle.h]]
-% \section{Polygons}
+
+\section{Polygons}
+
 [[kactl/geometry/insidePolygon.h]]
 [[kactl/geometry/PolygonArea.h]]
 [[kactl/geometry/PolygonCenter.h]]
@@ -140,7 +155,9 @@ KACTL part:
 [[kactl/geometry/PolygonDiameter.h]]
 [[kactl/geometry/PointInsideHull.h]]
 [[kactl/geometry/LineHullIntersection.h]]
-% \section{Misc. Point Set Problems}
+
+\section{Misc. Point Set Problems}
+
 [[kactl/geometry/closestPair.h]]
 [[kactl/geometry/kdTree.h]]
 [[kactl/geometry/DelaunayTriangulation.h]]
@@ -150,6 +167,8 @@ KACTL part:
 [[kactl/geometry/3dHull.h]]
 [[kactl/geometry/sphericalDistance.h]]
 
+\chapter{Strings}
+
 [[kactl/strings/KMP.h]]
 [[kactl/strings/Manacher.h]]
 [[kactl/strings/MinRotation.h]]
@@ -157,6 +176,8 @@ KACTL part:
 [[kactl/strings/SuffixTree.h]]
 [[kactl/strings/Hashing.h]]
 [[kactl/strings/AhoCorasick.h]]
+
+\chapter{Various}
 
 [[kactl/various/IntervalContainer.h]]
 [[kactl/various/IntervalCover.h]]
