Change the headline, fix XeTeX's unability to render ř in cmr

--- a/export/config.tex
+++ b/export/config.tex
@@ -40,4 +40,4 @@
 \def\hcol{\col{.0 .0 .0}\rm}   % hash at the start of (almost) each line
 
 % Miscellanea
-\def\docname{Tři nerdi – notebook}
+\def\docname{Charles University in Prague -- T\v ri nerdi}
