Add FastLineContainer, add note in LineContainer

--- a/export/notebook.tex
+++ b/export/notebook.tex
@@ -49,6 +49,7 @@ KACTL part:
 %[[kactl/data-structures/SubMatrix.h]]
 [[kactl/data-structures/Matrix.h]]
 [[kactl/data-structures/LineContainer.h]]
+[[data_structures/fast_line_container.cpp]]
 %[[kactl/data-structures/Treap.h]]
 [[kactl/data-structures/FenwickTree.h]]
 [[kactl/data-structures/FenwickTree2d.h]]
