--- a/export/notebook.tex
+++ b/export/notebook.tex
@@ -17,7 +17,7 @@
 %[[import/flow/minmax.cpp]] % -> [[kactl/graph/MinCostMaxFlow.h]]
 [[tree/centroid.cpp]]
 [[tree/heavylight2.cpp]]
-[[misc/set_tricks.cpp]]
+[[implementation/set_tricks.cpp]]
 %[[import/bipart/maxmatch.cpp]] % -> [[kactl/graph/DFSMatching.h]]
 %[[import/bipart/maxmatch2.cpp]] % -> [[kactl/graph/DFSMatching.h]]
 % [[import/geo/geo.cpp]] % -> KACTL geometry
