Move our code to src/trinerdi/

--- a/export/notebook.tex
+++ b/export/notebook.tex
@@ -2,21 +2,22 @@
 
 \input files
 
-[[base.hpp]]
-[[sc.sh]]
-[[fft/ntt.cpp]]
-[[fft/fft.cpp]]
-[[treap/treap.cpp]]
-[[numth/prime.cpp]]
-[[numth/misc.cpp]]
-[[numth/modeq.cpp]]
-[[import/numth/composite_comb.cpp]]
-[[import/numth/dlog.cpp]]
+[[trinerdi/base.hpp]]
+[[trinerdi/sc.sh]]
+[[trinerdi/fft/ntt.cpp]]
+[[trinerdi/fft/fft.cpp]]
+[[trinerdi/treap/treap.cpp]]
+[[trinerdi/numth/prime.cpp]]
+[[trinerdi/numth/misc.cpp]]
+[[trinerdi/numth/modeq.cpp]]
+[[trinerdi/import/numth/composite_comb.cpp]]
+[[trinerdi/import/numth/dlog.cpp]]
+[[trinerdi/flow/dinic.cpp]]
+[[trinerdi/tree/centroid.cpp]]
+[[trinerdi/tree/heavylight2.cpp]]
+
 %[[import/numth/gauss.cpp]] % -> [[kactl/numerical/SolveLinear.h]]
-[[flow/dinic.cpp]]
 %[[import/flow/minmax.cpp]] % -> [[kactl/graph/MinCostMaxFlow.h]]
-[[tree/centroid.cpp]]
-[[tree/heavylight2.cpp]]
 %[[import/bipart/maxmatch.cpp]] % -> [[kactl/graph/DFSMatching.h]]
 %[[import/bipart/maxmatch2.cpp]] % -> [[kactl/graph/DFSMatching.h]]
 % [[import/geo/geo.cpp]] % -> KACTL geometry
@@ -49,7 +50,7 @@ KACTL part:
 %[[kactl/data-structures/SubMatrix.h]]
 [[kactl/data-structures/Matrix.h]]
 [[kactl/data-structures/LineContainer.h]]
-[[data_structures/fast_line_container.cpp]]
+[[trinerdi/data_structures/fast_line_container.cpp]]
 %[[kactl/data-structures/Treap.h]]
 [[kactl/data-structures/FenwickTree.h]]
 [[kactl/data-structures/FenwickTree2d.h]]
