Divide our code into categories matching KACTL

--- a/export/notebook.tex
+++ b/export/notebook.tex
@@ -4,19 +4,19 @@
 
 [[trinerdi/base.hpp]]
 [[trinerdi/sc.sh]]
-[[trinerdi/fft/ntt.cpp]]
-[[trinerdi/fft/fft.cpp]]
-[[trinerdi/treap/treap.cpp]]
-[[trinerdi/numth/prime.cpp]]
-[[trinerdi/numth/misc.cpp]]
-[[trinerdi/numth/modeq.cpp]]
+[[trinerdi/numerical/ntt.cpp]]
+[[trinerdi/numerical/fft.cpp]]
+[[trinerdi/data-structures/treap.cpp]]
+[[trinerdi/number-theory/prime.cpp]]
+[[trinerdi/number-theory/misc.cpp]]
+[[trinerdi/number-theory/modeq.cpp]]
 [[trinerdi/import/numth/composite_comb.cpp]]
 [[trinerdi/import/numth/dlog.cpp]]
-[[trinerdi/flow/dinic.cpp]]
-[[trinerdi/tree/centroid.cpp]]
-[[trinerdi/tree/heavylight2.cpp]]
-[[trinerdi/implementation/set_tricks.cpp]]
-[[trinerdi/implementation/compression.cpp]]
+[[trinerdi/graph/dinic.cpp]]
+[[trinerdi/graph/centroid.cpp]]
+[[trinerdi/graph/heavylight2.cpp]]
+[[trinerdi/various/set_tricks.cpp]]
+[[trinerdi/various/compression.cpp]]
 
 KACTL part:
 
@@ -33,7 +33,7 @@ KACTL part:
 %[[kactl/data-structures/SubMatrix.h]]
 [[kactl/data-structures/Matrix.h]]
 [[kactl/data-structures/LineContainer.h]]
-[[trinerdi/data_structures/fast_line_container.cpp]]
+[[trinerdi/data-structures/fast_line_container.cpp]]
 %[[kactl/data-structures/Treap.h]]
 [[kactl/data-structures/FenwickTree.h]]
 [[kactl/data-structures/FenwickTree2d.h]]
