Disable our NTT and move it to number-theory

--- a/export/notebook.tex
+++ b/export/notebook.tex
@@ -40,7 +40,6 @@
 [[kactl/numerical/MatrixInverse.h]]
 %[[kactl/numerical/Tridiagonal.h]]
 [[kactl/numerical/FFT.h]]
-[[trinerdi/numerical/ntt.cpp]]
 %[[trinerdi/numerical/fft.cpp]] % KACTL's FFT is faster
 
 \chapter{Number theory}
@@ -55,6 +54,7 @@
 %[[kactl/number-theory/ModSum.h]]
 [[kactl/number-theory/ModMulLL.h]]
 [[kactl/number-theory/ModSqrt.h]]
+%[[trinerdi/number-theory/ntt.cpp]] % KACTL's NTT is faster
 [[kactl/number-theory/NTT.h]]
 %[[kactl/number-theory/eratosthenes.h]]
 %[[kactl/number-theory/MillerRabin.h]]
