--- a/export/notebook.tex
+++ b/export/notebook.tex
@@ -156,7 +156,7 @@
 [[kactl/strings/AhoCorasick.h]]
 
 \chapter{Various}
-
+[[trinerdi/various/bit_hacks.cpp]]
 [[trinerdi/various/set_tricks.cpp]]
 [[trinerdi/various/compression.cpp]]
 [[kactl/various/IntervalContainer.h]]
