Fix a typo in font name
csr was used instead of cmr in one font name, making `make book` work
with systems that have CS fonts installed, but not with others.

--- a/export/defs.tex
+++ b/export/defs.tex
@@ -30,7 +30,7 @@
 	\fontsize=#1\relax\scriptsize=#1\relax\scriptscriptsize=#1\relax
 	\multiply\scriptsize by 7\divide\scriptsize by 10
 	\divide\scriptscriptsize by 2
-	\font\tenrm=csr10 at \fontsize\font\sevenrm=cmr7 at \scriptsize\font\fiverm=cmr5 at\scriptscriptsize
+	\font\tenrm=cmr10 at \fontsize\font\sevenrm=cmr7 at \scriptsize\font\fiverm=cmr5 at\scriptscriptsize
 	\font\tenbf=cmbx10 at \fontsize
 	\font\tenit=cmti10 at \fontsize
 	\font\teni=cmmi10 at \fontsize\font\seveni=cmmi7 at \scriptsize\font\fivei=cmmi5 at\scriptscriptsize
