config.tex: rename header font macros to reflect changes in defs.tex

--- a/export/config.tex
+++ b/export/config.tex
@@ -6,8 +6,8 @@
 \def\seriffam{\mkseriffam\serifsize}
 \def\monofam{\mkmonofam\serifsize}
 \def\headlinefont{\mkseriffam{8pt}\rm}
-\def\serifheaderfont{\mkseriffam{8pt}\bf}
-\def\headerfont{\mkseriffam{8pt}\tt}
+\def\headerfont{\mkseriffam{8pt}\bf}
+\def\ttheaderfont{\mkseriffam{8pt}\tt}
 
 % Colours
 \def\typ{\col{0 0 .5}\bf}   % type definition
