Add names and descriptions

--- a/export/notebook.tex
+++ b/export/notebook.tex
@@ -45,8 +45,9 @@
 \chapter{Number theory}
 [[trinerdi/number-theory/fastexp.cpp]]
 [[trinerdi/number-theory/prime.cpp]]
+%[[kactl/number-theory/MillerRabin.h]] % -> our prime.cpp
 [[kactl/number-theory/eratosthenes.h]]
-%[[trinerdi/number-theory/sieve.cpp]]
+%[[trinerdi/number-theory/sieve.cpp]] % KACTL's is a dependency
 [[kactl/number-theory/euclid.h]]
 %[[trinerdi/number-theory/modeq.cpp]] % What about mod inv?
 [[kactl/number-theory/ModularArithmetic.h]]
@@ -58,11 +59,10 @@
 [[trinerdi/import/numth/dlog.cpp]]
 %[[trinerdi/number-theory/ntt.cpp]] % KACTL's NTT is faster
 [[kactl/number-theory/NTT.h]]
-%[[kactl/number-theory/MillerRabin.h]]
 [[kactl/number-theory/factor.h]]
 [[kactl/number-theory/phiFunction.h]]
 [[kactl/number-theory/chinese.h]]
-[[trinerdi/import/numth/composite_comb.cpp]]
+%[[trinerdi/import/numth/composite_comb.cpp]] % Needs cleaning up
 
 \chapter{Combinatorics}
 
