Add lazy segment tree + persistent to notebook

--- a/export/notebook.tex
+++ b/export/notebook.tex
@@ -8,8 +8,10 @@
 \chapter{Data structures}
 
 [[kactl/data-structures/OrderStatisticTree.h]]
-[[kactl/data-structures/SegmentTree.h]]
-[[kactl/data-structures/LazySegmentTree.h]]
+%[[kactl/data-structures/SegmentTree.h]]
+%[[kactl/data-structures/LazySegmentTree.h]]
+[[trinerdi/data-structures/lazy_segtree.cpp]]
+[[trinerdi/data-structures/persistent_segtree.cpp]]
 [[kactl/data-structures/UnionFind.h]]
 %[[kactl/data-structures/SubMatrix.h]]
 [[kactl/data-structures/Matrix.h]]
