Export: change the text in the headline to university name only

--- a/export/config.tex
+++ b/export/config.tex
@@ -20,4 +20,4 @@
 \def\hcol{\col{.0 .0 .0}\rm}   % hash at the start of (almost) each line
 
 % Miscellanea
-\def\docname{Charles University in Prague -- T\v ri nerdi}
+\def\docname{Charles University}
