--- a/export/config.tex
+++ b/export/config.tex
@@ -8,6 +8,8 @@
 \def\headlinefont{\mkseriffam{8pt}\rm}
 \def\headerfont{\mkseriffam{8pt}\bf}
 \def\ttheaderfont{\mkseriffam{8pt}\tt}
+\def\subsectionfont{\mkseriffam{7.5pt}\bf}
+\def\subsubsectionfont{\mkseriffam{7pt}\bf}
 
 % Colours
 \def\typ{\col{0 0 .5}\bf}   % type definition
