--- a/export/defs.tex
+++ b/export/defs.tex
@@ -247,6 +247,6 @@
 
 \def\dotoc{%
 	\triplecolumns
-	{\let\ttheaderfont\tt\readtocfile}
+	{\let\ttheaderfont\tt\let\subsectionfont\rm\let\subsubsectionfont\rm\readtocfile}
 	\doublecolumns
 }
