Credit KACTL on the first page

--- a/export/notebook.tex
+++ b/export/notebook.tex
@@ -2,6 +2,12 @@
 
 \dotoc
 
+\chapter{Prologue}
+
+Many algorithms in this notebook were taken from the KACTL notebook (with minor
+modifications). Its original version is maintained at {\tt
+https://github.com/kth-competitive-programming/kactl}.
+
 [[trinerdi/base.hpp]]
 [[trinerdi/sc.sh]]
 
