--- a/export/notebook.tex
+++ b/export/notebook.tex
@@ -8,6 +8,10 @@ Many algorithms in this notebook were taken from the KACTL notebook (with minor
 modifications). Its original version is maintained at {\tt
 https://github.com/kth-competitive-programming/kactl}.
 
+The sources of this notebook are maintained at {\tt
+https://github.com/trinerdi/icpc-notebook}. Authorship information for each
+source file and much more can be find there.
+
 [[trinerdi/base.hpp]]
 [[trinerdi/sc.sh]]
 
