--- a/export/notebook.tex
+++ b/export/notebook.tex
@@ -10,7 +10,7 @@ https://github.com/kth-competitive-programming/kactl}.
 
 The sources of this notebook are maintained at {\tt
 https://github.com/trinerdi/icpc-notebook}. Authorship information for each
-source file and much more can be find there.
+source file and much more can be found there.
 
 [[trinerdi/base.hpp]]
 [[trinerdi/sc.sh]]
