--- a/export/notebook.tex
+++ b/export/notebook.tex
@@ -12,7 +12,7 @@ The sources of this notebook are maintained at {\tt
 https://github.com/trinerdi/icpc-notebook}. Authorship information for each
 source file and much more can be found there.
 
-[[trinerdi/base.hpp]]
+[[trinerdi/template.cpp]]
 [[trinerdi/sc.sh]]
 [[trinerdi/vimrc]]
 [[trinerdi/check.sh]]
